# ms-sso-openconnect

./: .gitignore  CLAUDE.md  Makefile  README.md  flake.nix  main.py  ms-sso-openconnect  ms-sso-openconnect.py  pyproject.toml
codebase/: README.md
codebase/core/: auth.py  config.py  connect.py  cookies.py  totp.py
codebase/ui/: README.md  pyproject.toml
codebase/ui/src/vpn_ui/: connection_form.py  constants.py  main.py  settings_dialog.py  tray.py  worker.py
codebase/ui/src/vpn_ui/backend/: base.py  shared.py
codebase/ui/src/vpn_ui/platform/: __init__.py  autostart.py  notifications.py
codebase/ui/src/vpn_ui/resources/: __init__.py
core/: __init__.py  auth.py  config.py  connect.py  cookies.py  totp.py
daemon/: __init__.py  client.py  platform.py  server.py  validator.py
frontends/: README.md
frontends/gnome-plugin/: README.md  README.plugin.md  build-deb.sh  build.sh  install-dev.sh  meson.build
frontends/gnome-plugin/packaging/debian/: postinst
frontends/gnome-plugin/src/: nm-ms-sso-auth-dialog.py  nm-ms-sso-service.py
frontends/linux/: README.md  build.sh
frontends/linux/packaging/debian/: changelog  control  copyright  rules
frontends/linux/packaging/desktop/: ms-sso-openconnect-ui.desktop
frontends/linux/packaging/polkit/: org.openconnect.policy
frontends/linux/scripts/: build-linux.sh
frontends/osx/: README.md  build.sh
frontends/osx/daemon/: __init__.py  vpn_daemon.py
frontends/osx/scripts/: build-macos.sh
gnome-nm-plugin/: README.md  build-deb.sh  install-dev.sh  meson.build
gnome-nm-plugin/packaging/debian/: changelog  control
gnome-nm-plugin/src/: nm-ms-sso-auth-dialog.py  nm-ms-sso-service.py
gnome-nm-plugin/src/editor/: meson.build  nm-ms-sso-editor.c  nm-ms-sso-editor.h
gui/: __init__.py  __main__.py  app.py  autostart.py  connection_form.py  constants.py  notifications.py  settings.py  tray.py  worker.py
linux-ui/: .gitignore  README.md  pyproject.toml  requirements.txt
linux-ui/desktop/: ms-sso-openconnect-ui.desktop
linux-ui/packaging/appimage/: AppImageBuilder.yml
linux-ui/packaging/debian/: rules
linux-ui/packaging/polkit/: org.openconnect.policy
linux-ui/scripts/: build-appimage.sh  build-deb.sh  build-macos-app.sh
linux-ui/src/vpn_ui/: autostart.py  connection_form.py  main.py  notifications.py  settings_dialog.py  tray.py  vpn_backend.py  worker.py
linux-ui/tests/: __init__.py  test_vpn_backend.py
macos-ui/: .gitignore  README.md  pyproject.toml  requirements.txt
macos-ui/packaging/launchd/: com.github.ms-sso-openconnect-ui.plist
macos-ui/scripts/: build-macos-app.sh
macos-ui/src/vpn_ui/: __init__.py  autostart.py  connection_form.py  constants.py  main.py  notifications.py  tray.py  vpn_backend.py  worker.py
networkmanager/: README.md  meson.build  nm-ms-sso-openconnect-service.conf  nm-ms-sso-openconnect-service.name
networkmanager/packaging/debian/: changelog  control  copyright  postinst  postrm  prerm  rules
networkmanager/scripts/: build-deb.sh
networkmanager/src/: nm-ms-sso-openconnect-auth-dialog  nm-ms-sso-openconnect-editor-gtk4.c  nm-ms-sso-openconnect-plugin.c  nm-ms-sso-openconnect-service  nm-ms-sso-openconnect-service-openconnect-helper
nix/: README.md  default.nix  ms-sso-openconnect-core.nix  ms-sso-openconnect-ui.nix  networkmanager-ms-sso.nix  nixos-module.nix  overlay.nix  packages.nix
nm-plugin/: PLAN.md  build-deb.sh  install-dev.sh  meson.build
nm-plugin/data/: nm-ms-sso-service.conf  nm-ms-sso-service.name
nm-plugin/packaging/debian/: copyright  rules
nm-plugin/src/: nm-ms-sso-auth-dialog.py  nm-ms-sso-service.py
nm-plugin/src/editor/: nm-ms-sso-editor.c
ui/: .gitignore  README.md  pyproject.toml  requirements.txt
ui/macos/daemon/: com.github.ms-sso-openconnect.daemon.plist  protocol.py  vpn_daemon.py
ui/packaging/debian/: changelog  control  copyright  postinst  postrm
ui/packaging/launchd/: com.github.ms-sso-openconnect-ui.helper.plist
ui/packaging/linux/debian/: postinst  postrm  rules
ui/packaging/pkg/: postinstall
ui/packaging/polkit/: org.openconnect.policy
ui/packaging/scripts/: openconnect-wrapper.sh
ui/scripts/: build-linux.sh  build-macos-app.sh  build-macos-pkg.sh  build-macos.sh  install-dev.sh
ui/src/vpn_ui/: __init__.py  __main__.py  autostart.py  constants.py  macos_launchd.py  main.py  notifications.py  privileged_helper.py  tray.py  vpn_backend.py
ui/src/vpn_ui/backend/: __init__.py  shared.py
ui/src/vpn_ui/platform/: backend.py
